--- a/alacritty.yml
+++ b/alacritty.yml
@@ -26,13 +26,11 @@ window:
   # (change requires restart)
   padding:
     x: 5
-    y: 5
-    #y: 40 # for transparent titlebar.
+    y: 25 # Some extra padding for transparent titlebar.
 
   # Window decorations
   # Setting this to false will result in window without borders and title bar.
-  decorations: true # OLD VALUE
-  #decorations: transparent
+  decorations: transparent
 
 scrolling:
   # How many lines of scrollback to keep,
