--- a/alacritty.yml
+++ b/alacritty.yml
@@ -28,9 +28,15 @@ window:
     x: 0
     y: 22 # Some extra padding for transparent title bar.
 
+  # Spread additional padding evenly around the terminal content.
+  dynamic_padding: false
+
   # Window decorations
   # Setting this to false will result in window without borders and title bar.
   decorations: transparent
+
+  # When true, alacritty starts maximized.
+  start_maximized: false
 
 scrolling:
   # How many lines of scrollback to keep,
@@ -123,10 +129,6 @@ font:
 # Should display the render timer
 render_timer: false
 
-# Use custom cursor colors. If true, display the cursor in the cursor.foreground
-# and cursor.background colors, otherwise invert the colors of the cursor.
-custom_cursor_colors: false
-
 # Colors (Gruvbox light)
 colors:
   # Default colors
@@ -204,6 +206,9 @@ background_opacity: 1.0
 #  - { mouse: Middle, action: PasteSelection }
 
 mouse:
+  # If this is `true`, the cursor is temporarily hidden when typing.
+  hide_when_typing: false
+
   # Click settings
   #
   # The `double_click` and `triple_click` settings control the time
@@ -212,20 +217,38 @@ mouse:
   double_click: { threshold: 300 }
   triple_click: { threshold: 300 }
 
+  url:
+    # URL launcher
+    #
+    # This program is executed when clicking on a text which is recognized as a URL.
+    # The URL is always added to the command as the last parameter.
+    launcher: open
+
+    # URL modifiers
+    #
+    # These are the modifiers that need to be held down for opening URLs when clicking
+    # on them. The available modifiers are documented in the key binding section.
+    modifiers: Shift
+
 selection:
   semantic_escape_chars: ",│`|:\"' ()[]{}<>"
 
 dynamic_title: true
 
-hide_cursor_when_typing: false
+cursor:
+  # Cursor style
+  #
+  # Values for 'style':
+  #   - ▇ Block
+  #   - _ Underline
+  #   - | Beam
+  style: Block
 
-# Style of the cursor
-#
-# Values for 'cursor_style':
-# - Block
-# - Underline
-# - Beam
-cursor_style: Block
+
+  # If this is `true`, the cursor will be rendered as a hollow box when the
+  # window is not focused.
+  unfocused_hollow: true
+
 
 # Live config reload (changes require restart)
 live_config_reload: false
