--- a/alacritty.yml
+++ b/alacritty.yml
@@ -64,9 +64,6 @@ scrolling:
 # Display tabs using this many cells (changes require restart)
 tabspaces: 4
 
-# When true, bold text is drawn using the bright variant of colors.
-draw_bold_text_with_bright_colors: true
-
 # Font configuration (changes require restart)
 #
 # Important font attributes like antialiasing, subpixel aa, and hinting can be
@@ -128,6 +125,12 @@ font:
 
 # Should display the render timer
 render_timer: false
+
+# Keep the log file after quitting Alacritty.
+persistent_logging: false
+
+# When true, bold text is drawn using the bright variant of colors.
+draw_bold_text_with_bright_colors: true
 
 # Colors (Gruvbox light)
 colors:
