--- a/alacritty.yml
+++ b/alacritty.yml
@@ -1,6 +1,6 @@
 window:
   dimensions:
-    columns: 105
+    columns: 100
     lines: 24
   padding:
     x: 0
@@ -19,11 +19,14 @@ tabspaces: 4
 
 font:
   normal:
-    family: Fira Code Retina
+    family: Fira Code
+    style: Retina
   bold:
-    family: Fira Code Bold
+    style: Medium
   italic:
-    family: Fira Code Light
+    style: Light
+  bold_italic:
+    style: Medium
   size: 13.0
   offset:
     x: 0
@@ -33,11 +36,11 @@ font:
     y: 0
   use_thin_strokes: true
 
+draw_bold_text_with_bright_colors: true
+
 debug:
   render_timer: false
   persistent_logging: false
-
-draw_bold_text_with_bright_colors: true
 
 colors:
   primary:
@@ -77,6 +80,7 @@ mouse:
 
 selection:
   semantic_escape_chars: ",│`|:\"' ()[]{}<>"
+  save_to_clipboard: false
 
 dynamic_title: true
 
@@ -86,6 +90,7 @@ cursor:
 
 live_config_reload: false
 
+
 shell:
   program: /usr/local/bin/bash
   args:
@@ -93,16 +98,19 @@ shell:
 
 key_bindings:
   # macOS only.
-  - { key: Key0,   mods: Command, action: ResetFontSize    }
-  - { key: Equals, mods: Command, action: IncreaseFontSize }
-  - { key: Add,    mods: Command, action: IncreaseFontSize }
-  - { key: Minus,  mods: Command, action: DecreaseFontSize }
-  - { key: K,      mods: Command, action: ClearHistory     }
-  - { key: K,      mods: Command, chars: "\x0c"            }
-  - { key: V,      mods: Command, action: Paste            }
-  - { key: C,      mods: Command, action: Copy             }
-  - { key: H,      mods: Command, action: Hide             }
-  - { key: N, mods: Command, command: { program: "open", args: ["-n", "/Applications/Alacritty.app"] } }
+  - { key: Key0,   mods: Command,         action: ResetFontSize    }
+  - { key: Equals, mods: Command,         action: IncreaseFontSize }
+  - { key: Add,    mods: Command,         action: IncreaseFontSize }
+  - { key: Minus,  mods: Command,         action: DecreaseFontSize }
+  - { key: K,      mods: Command,         action: ClearHistory     }
+  - { key: K,      mods: Command,         chars: "\x0c"            }
+  - { key: V,      mods: Command,         action: Paste            }
+  - { key: C,      mods: Command,         action: Copy             }
+  - { key: H,      mods: Command,         action: Hide             }
+  - { key: Q,      mods: Command,         action: Quit             }
+  - { key: W,      mods: Command,         action: Quit             }
+  - { key: F,      mods: Command|Control, action: ToggleFullscreen }
+  - { key: N,      mods: Command,         command: { program: "open", args: ["-n", "/Applications/Alacritty.app"] } }
 
   - { key: Paste,                   action: Paste                            }
   - { key: Copy,                    action: Copy                             }
