Fix SHELL var inside tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -18,8 +18,7 @@ set -g escape-time 0
 # Start window indexing at 1, easier to access on the keyboard.
 set -g base-index 1
 # Use correct bash.
-# TODO: add "-il" options.
-set -g default-shell "/usr/local/bin/bash"
+set -g default-shell "$SHELL"
 # The North Remembers.
 set -g history-limit 10000
 # Match Vim/Firefox in window access.
