Add some Vim like shortcuts to tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -33,3 +33,16 @@ set -g pane-base-index 1
 
 # Mouse
 set -g mouse on
+
+# Move around panes using Vim keys.
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# Window split keys.
+bind b split-window -h
+bind v split-window -v
+
+# Match what we did in Vim.
+bind \; command-prompt
