Move tmux status to the top of the screen

--- a/tmux.conf
+++ b/tmux.conf
@@ -23,6 +23,8 @@ set -g default-shell "$SHELL"
 set -g history-limit 10000
 # Match Vim/Firefox in window access.
 set -g renumber-windows on
+# Match macOS position of the clock.
+set -g status-position top
 
 #
 ## Window options.
