Enable correct colours in tmux (again)

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,6 @@
 set -g default-terminal "xterm-256color"
+# Enable 24-bit colour (truecolour) support.
+set -ga terminal-overrides ",xterm-256color:Tc"
 
 # Use Ctrl + a as the prefix key.
 set -g prefix C-a
