--- a/tmux.conf
+++ b/tmux.conf
@@ -19,7 +19,7 @@ set -g escape-time 0
 
 # Start window indexing at 1, easier to access on the keyboard.
 set -g base-index 1
-# Use correct bash.
+# Use correct shell.
 set -g default-shell "$SHELL"
 # The North Remembers.
 set -g history-limit 10000
@@ -35,7 +35,10 @@ set -g status-position top
 # Consistency with base-index above.
 set -g pane-base-index 1
 
-# Mouse
+# Status line.
+set -g status-right "%a %b %d %Y %H:%M"
+
+# Mouse support.
 set -g mouse on
 
 # Move around panes using Vim keys.
