--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,5 @@
+# Location: ~/.tmux.conf
+
 set -g default-terminal "xterm-256color"
 # Enable 24-bit colour (truecolour) support.
 set -ga terminal-overrides ",xterm-256color:Tc"
