Use tmux-resurrect
Allow saving and restoring sessions in Tmux.

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,5 @@
 # Location: ~/.tmux.conf
+# Plugin manager: https://github.com/tmux-plugins/tpm
 
 set -g default-terminal "xterm-256color"
 # Enable 24-bit colour (truecolour) support.
@@ -55,3 +56,25 @@ bind v split-window -v
 
 # Match what we did in Vim.
 bind \; command-prompt
+
+#
+# # Plugins
+#
+
+# Plugin manager.
+set -g @plugin 'tmux-plugins/tpm'
+
+# Tmux Resurrect, makes tmux survive system restarts.
+set -g @plugin "tmux-plugins/tmux-resurrect"
+set -g @resurrect-capture-pane-contents "on"
+
+# tmux-continuum, automatically save and restore the tmux environment.
+# Note: requires tmux-ressurect.
+set -g @plugin "tmux-plugins/tmux-continuum"
+set -g @continuum-restore "on"
+# TODO: change to 15:
+set -g @continuum-save-interval "1" # Save every 15 minutes.
+
+# Run the plugin manager.
+# Note: must be the last line!
+run "~/.tmux/plugins/tpm/tpm"
