Extend tmux session restoring to Vim

--- a/tmux.conf
+++ b/tmux.conf
@@ -72,8 +72,8 @@ set -g @resurrect-capture-pane-contents "on"
 # Note: requires tmux-ressurect.
 set -g @plugin "tmux-plugins/tmux-continuum"
 set -g @continuum-restore "on"
-# TODO: change to 15:
-set -g @continuum-save-interval "1" # Save every 15 minutes.
+set -g @continuum-save-interval "15" # Save every 15 minutes.
+set -g @resurrect-strategy-vim "session"
 
 # Run the plugin manager.
 # Note: must be the last line!
