Run Tmux plugin manager script in the background
Reduces the startup times on slower machines, such as an Raspberry Pi.

--- a/tmux.conf
+++ b/tmux.conf
@@ -77,4 +77,4 @@ set -g @resurrect-strategy-vim "session"
 
 # Run the plugin manager.
 # Note: must be the last line!
-run "~/.tmux/plugins/tpm/tpm"
+run -b "~/.tmux/plugins/tpm/tpm"
