--- a/tmux.conf
+++ b/tmux.conf
@@ -51,8 +51,8 @@ bind k select-pane -U
 bind l select-pane -R
 
 # Window split keys.
-bind b split-window -h
-bind v split-window -v
+bind b split-window -h -c "#{pane_current_path}"
+bind v split-window -v -c "#{pane_current_path}"
 
 # Match what we did in Vim.
 bind \; command-prompt
