Show sessions in tmux instead of the entire tree

--- a/tmux.conf
+++ b/tmux.conf
@@ -57,6 +57,9 @@ bind v split-window -v -c "#{pane_current_path}"
 # Match what we did in Vim.
 bind \; command-prompt
 
+# Don't care about all panes, only sessions.
+bind w choose-session
+
 #
 # # Plugins
 #
