Use ctrl-b as prefix for Tmux in SSH sessions

--- a/tmux.conf
+++ b/tmux.conf
@@ -5,9 +5,15 @@ set -g default-terminal "xterm-256color"
 # Enable 24-bit colour (truecolour) support.
 set -ga terminal-overrides ",xterm-256color:Tc"
 
-# Use Ctrl + a as the prefix key.
-set -g prefix C-a
-bind C-a send-prefix
+# If either $SSH_CLIENT or $SSH_TTY is set it means we're in a SSH session.
+%if "#{!=:#{SSH_CLIENT}#{SSH_TTY},}"
+	# In SSH session.
+	set -g prefix C-b
+	bind C-b send-prefix
+%else
+	set -g prefix C-a
+	bind C-a send-prefix
+%endif
 
 #
 ## Server options.
