Change w shortcut in Tmux to show sessions
Rather then the entire tree.

--- a/tmux.conf
+++ b/tmux.conf
@@ -64,7 +64,7 @@ bind v split-window -v -c "#{pane_current_path}"
 bind \; command-prompt
 
 # Don't care about all panes, only sessions.
-bind w choose-session
+bind w choose-tree -s -Z
 
 #
 # # Plugins
