Don't show a status bar for Tmux in a SSH session
Don't want to show a double status bar.

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,6 +10,8 @@ set -ga terminal-overrides ",xterm-256color:Tc"
 	# In SSH session.
 	set -g prefix C-b
 	bind C-b send-prefix
+	# Don't want a double status bar
+	set -g status off
 %else
 	set -g prefix C-a
 	bind C-a send-prefix
