Disable automatic restore for tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -82,7 +82,7 @@ set -g @resurrect-capture-pane-contents "on"
 # tmux-continuum, automatically save and restore the tmux environment.
 # Note: requires tmux-ressurect.
 set -g @plugin "tmux-plugins/tmux-continuum"
-set -g @continuum-restore "on"
+set -g @continuum-restore "off"
 set -g @continuum-save-interval "15" # Save every 15 minutes.
 set -g @resurrect-strategy-vim "session"
 
