Unbind copy-mode-vi MouseDragEnd1Pane in Tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -68,6 +68,9 @@ bind \; command-prompt
 # Don't care about all panes, only sessions.
 bind w choose-tree -s -Z
 
+# Don't scroll down when copying.
+unbind -T copy-mode-vi MouseDragEnd1Pane
+
 #
 # # Plugins
 #
