Don't start a login shell in Foot or Tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -32,6 +32,9 @@ set -g escape-time 0
 set -g base-index 1
 # Use correct shell.
 set -g default-shell "$SHELL"
+# By default Tmux uses a login shell, but running the shell as a command we
+# avoid that.
+set -g default-command "${SHELL}"
 # The North Remembers.
 set -g history-limit 20000
 # Match Vim/Firefox in window access.
