--- a/foot.ini
+++ b/foot.ini
@@ -19,29 +19,29 @@ lines=10000
 multiplier=3.0
 
 [colors]
-foreground=0x3c3836
-background=0xf2e5bc
+foreground=3c3836
+background=f2e5bc
 
 ## Normal/regular colors (color palette 0-7)
-regular0=0xfbf1c7  # black
-regular1=0xcc241d  # red
-regular2=0x98971a  # green
-regular3=0xd79921  # yellow
-regular4=0x458588  # blue
+regular0=fbf1c7  # black
+regular1=cc241d  # red
+regular2=98971a  # green
+regular3=d79921  # yellow
+regular4=458588  # blue
 
-regular5=0xb16286  # magenta
-regular6=0x689d6a  # cyan
-regular7=0x7c6f64  # white
+regular5=b16286  # magenta
+regular6=689d6a  # cyan
+regular7=7c6f64  # white
 
 ## Bright colors (color palette 8-15)
-bright0=0x928374   # bright black
-bright1=0x9d0006   # bright red
-bright2=0x79740e   # bright green
-bright3=0xb57614   # bright yellow
-bright4=0x076678   # bright blue
-bright5=0x8f3f71   # bright magenta
-bright6=0x427b58   # bright cyan
-bright7=0x3c3836   # bright white
+bright0=928374   # bright black
+bright1=9d0006   # bright red
+bright2=79740e   # bright green
+bright3=b57614   # bright yellow
+bright4=076678   # bright blue
+bright5=8f3f71   # bright magenta
+bright6=427b58   # bright cyan
+bright7=3c3836   # bright white
 
 [key-bindings]
 clipboard-paste=Control+v XF86Paste
