Enable copying on macOS for tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -70,3 +70,6 @@ bind w choose-tree -s -Z
 
 # Don't scroll down when copying.
 unbind -T copy-mode-vi MouseDragEnd1Pane
+
+# Copying on macOS.
+set -s copy-command pbcopy
