Force bash shell in Alacritty
Hardcode path so it will only work on macOS with Homebrew installed
bash.

--- a/alacritty.toml
+++ b/alacritty.toml
@@ -47,4 +47,5 @@ white = "0x3c3836"
 duration = 0 # Disable.
 
 [terminal]
+shell = { program = "/opt/homebrew/bin/bash", args = ["-il"] }
 osc52 = "Disabled"
