--- a/foot.ini
+++ b/foot.ini
@@ -1,6 +1,6 @@
 # Location: ~/config/foot/foot.ini
 
-shell=/bin/bash
+shell=tmux new-session -A -t main -s main
 
 # Font.
 font=Fira Code Retina:size=18
