Add binding to clear tmux history

--- a/tmux.conf
+++ b/tmux.conf
@@ -73,3 +73,6 @@ unbind -T copy-mode-vi MouseDragEnd1Pane
 
 # Copying on macOS.
 set -s copy-command pbcopy
+
+# Clear scrollback history.
+bind C-l clear-history
